# t212-tax-lots

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
src/t212_tax_lots/: __init__.py  cli.py  parser.py  portfolio.py
tests/: test_cli.py  test_parser.py  test_portfolio.py
