[project]
name = "t212-tax-lots"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "polars>=1.41.2",
    "python-dateutil>=2.9.0.post0",
    "rich>=15.0.0",
    "typer>=0.26.7",
]

[project.scripts]
t212-tax-lots = "t212_tax_lots.cli:app"

[build-system]
requires = ["uv_build>=0.10.1,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "ruff>=0.15.16",
]
